InternexDev_Sandbox/src/objects/QB_Payment__c.object
<CustomObject>
    <fields>
        <fullName>CurrencyRef__c</fullName>
        <label>CurrencyRef</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerRef__c</fullName>
        <label>CustomerRef</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DepositToAccountRef__c</fullName>
        <label>DepositToAccountRef</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Amount__c</fullName>
        <label>Line Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Line_Transaction_ID__c</fullName>
        <label>Line Transaction ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Transaction_Open_Balance__c</fullName>
        <label>Line Transaction Open Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Line_Transaction_ReferenceNumber__c</fullName>
        <label>Line Transaction ReferenceNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProcessPayment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ProcessPayment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QB_CreateTime__c</fullName>
        <label>QB CreateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>QB_LastUpdatedTime__c</fullName>
        <label>QB LastUpdatedTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SyncToken__c</fullName>
        <label>SyncToken</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalAmt__c</fullName>
        <label>TotalAmt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UnappliedAmt__c</fullName>
        <label>UnappliedAmt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>QB Payment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>QB Payment ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QB Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>